traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:36: error: not found: value x
    x=x-1;
    ^TraversalZigZag:37: error: not found: value x
    setX(x)
         ^